tests/snapshots/cli__show_multiple_page_files.snap
---
source: tests/cli.rs
info:
  program: logseq-srs
  args:
    - show
    - /tmp/.tmphVXNxA
  page_lines:
    - - "- Not card"
      - "- What is the volume of a sphere (symbolic)? #card"
      - "  card-last-interval:: 244.14"
      - "  card-repeats:: 6"
      - "  card-ease-factor:: 3.1"
      - "  card-next-schedule:: 2025-11-27T00:00:00.000Z"
      - "  card-last-reviewed:: 2025-03-28T07:46:41.223Z"
      - "  card-last-score:: 5"
      - "  - $$V = \\frac{4}{3} \\pi r^3$$"
      - "- Not card"
      - ""
    - - "- Not card"
      - "- What is a sphere? #card"
      - "  card-last-interval:: 244.14"
      - "  card-repeats:: 6"
      - "  card-ease-factor:: 3.1"
      - "  card-next-schedule:: 2025-11-21T00:00:00.000Z"
      - "  card-last-reviewed:: 2025-03-22T09:54:57.202Z"
      - "  card-last-score:: 5"
      - "  - Set of points in a 3 dimensional space that are equidistant from a center point."
      - "- Not card"
      - ""
---
success: true
exit_code: 0
----- stdout -----
- What is a sphere? #card
  - Set of points in a 3 dimensional space that are equidistant from a center point.
- What is the volume of a sphere (symbolic)? #card
  - $$V = \frac{4}{3} \pi r^3$$

----- stderr -----
